--- a/terms.html
+++ b/terms.html
@@ -20,14 +20,27 @@
             overflow-y: auto;
         }
         .persistent-container {
-        background-color: #F7F8F9;
-        width: 970px;
-        padding: 25px;
-        position: relative;
-        margin-bottom: 50px;
-        
-        
-}
+            background-color: #F7F8F9;
+            width: 95%; 
+            max-width: 970px; 
+            padding: 25px;
+            position: relative;
+            margin-bottom: 50px;
+        }
+        @media screen and (max-width: 768px) {
+            .persistent-container {
+                width: 90%; 
+                padding: 20px; 
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            .persistent-container {
+                width: 95%; 
+                padding: 15px; 
+            }
+        }
+
         h1 {
             text-align: left;
             padding: 20px 0px;
@@ -92,10 +105,8 @@
     </main>
 </div>
 <script>
-    // Get the current page filename
     let currentPage = window.location.pathname.split("/").pop();
 
-    // Apply active class based on the page
     if (currentPage === "index.html" || currentPage === "") {
         document.getElementById("nav-home").classList.add("active");
     } else if (currentPage === "terms.html") {
@@ -108,13 +119,11 @@
 
     window.addEventListener("scroll", () => {
         if (window.scrollY > lastScrollY) {
-            // User is scrolling down → Hide header
             header.classList.add("hidden");
         } else {
-            // User is scrolling up → Show header
             header.classList.remove("hidden");
         }
-        lastScrollY = window.scrollY; // Update last scroll position
+        lastScrollY = window.scrollY; 
     });
 </script>
 
