--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     <header class="header">
         <img src="bynder-logo-white.png" alt="Logo" class="logo">
         <nav class="nav">
-            <a href="index.html" class="active">Link Builder</a>
-            <a href="terms.html">Terms & Privacy</a>
+            <a href="./" class="active">Link Builder</a>
+            <a href="./terms">Terms & Privacy</a>
         </nav>
     </header>
 
