--- a/terms.html
+++ b/terms.html
@@ -58,16 +58,14 @@
         document.addEventListener("DOMContentLoaded", setFavicon);
     </script>
 </head>
-<body>
     <header class="header">
         <img src="bynder-logo-white.png" alt="Logo" class="logo">
         <nav class="nav">
-            <a href="index.html">Link Builder</a>
-            <a href="terms.html" class="active">Terms & Privacy</a>
+            <a href="./" class="active">Link Builder</a>
+            <a href="./terms">Terms & Privacy</a>
         </nav>
     </header>
-    
-    
+
     <div class="persistent-container">
     <main class="content">
         <h1>Terms of Use & Privacy Policy</h1>
