--- a/terms.html
+++ b/terms.html
@@ -58,14 +58,16 @@
         document.addEventListener("DOMContentLoaded", setFavicon);
     </script>
 </head>
-    <header class="header">
-        <img src="bynder-logo-white.png" alt="Logo" class="logo">
-        <nav class="nav">
-            <a href="./" class="active">Link Builder</a>
-            <a href="./terms">Terms & Privacy</a>
-        </nav>
-    </header>
+<header class="header">
+    <img src="bynder-logo-white.png" alt="Logo" class="logo">
+    <nav class="nav">
+        <a href="index.html" id="nav-home">Link Builder</a>
+        <a href="terms.html" id="nav-terms">Terms & Privacy</a>
+    </nav>    
+</header>
 
+    
+    
     <div class="persistent-container">
     <main class="content">
         <h1>Terms of Use & Privacy Policy</h1>
