--- a/index.html
+++ b/index.html
@@ -114,13 +114,16 @@
 
 
 </head>
-    <header class="header">
-        <img src="bynder-logo-white.png" alt="Logo" class="logo">
-        <nav class="nav">
-            <a href="./" class="active">Link Builder</a>
-            <a href="./terms">Terms & Privacy</a>
-        </nav>
-    </header>
+</head>
+<header class="header">
+    <img src="bynder-logo-white.png" alt="Logo" class="logo">
+    <nav class="nav">
+        <a href="index.html" id="nav-home">Link Builder</a>
+        <a href="terms.html" id="nav-terms">Terms & Privacy</a>
+    </nav>    
+</header>
+
+
 
     <div class="container-wrapper">
         <div class="container active" id="container1">
