--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 <header class="header">
     <img src="bynder-logo-white.png" alt="Logo" class="logo">
     <nav class="nav">
-        <a href="index.html" id="nav-home">Link Builder</a>
-        <a href="terms.html" id="nav-terms">Terms & Privacy</a>
+        <a href="./" id="nav-home">Link Builder</a>
+        <a href="./terms" id="nav-terms">Terms & Privacy</a>
     </nav>    
 </header>
 
