--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </head>
 </head>
 <header class="header">
-    <img src="bynder-logo-white.png" alt="Logo" class="logo">
+    <img src="Logo.svg" alt="Logo" class="logo">
     <nav class="nav">
         <a href="./" id="nav-home">Link Builder</a>
         <a href="./terms" id="nav-terms">Terms & Privacy</a>
