--- a/terms.html
+++ b/terms.html
@@ -59,7 +59,7 @@
     </script>
 </head>
 <header class="header">
-    <img src="bynder-logo-white.png" alt="Logo" class="logo">
+    <img src="Logo.svg" alt="Logo" class="logo">
     <nav class="nav">
         <a href="./" id="nav-home">Link Builder</a>
         <a href="./terms" id="nav-terms">Terms & Privacy</a>
