--- a/terms.html
+++ b/terms.html
@@ -59,10 +59,12 @@
     </script>
 </head>
 <header class="header">
-    <nav class="nav">
-        <a href="./" id="nav-home">Link Builder</a>
-        <a href="./terms" id="nav-terms">Terms & Privacy</a>
-    </nav>    
+    <header class="header">
+        <nav class="nav">
+            <a href="premade.html" id="nav-premade">Premade Links</a>
+            <a href="index.html" id="nav-home">Link Builder</a>
+            <a href="terms.html" id="nav-terms">Terms & Privacy</a>
+        </nav>  
 </header>
 
     
