--- a/terms.html
+++ b/terms.html
@@ -59,16 +59,16 @@
     </script>
 </head>
 <header class="header">
-    <header class="header">
-        <nav class="nav">
-            <a href="premade.html" id="nav-premade">Premade Links</a>
-            <a href="index.html" id="nav-home">Link Builder</a>
-            <a href="terms.html" id="nav-terms">Terms & Privacy</a>
-        </nav>  
+    <nav class="nav">
+        <a href="premade.html" id="nav-premade">Premade Links</a>
+        <a href="index.html" id="nav-home">Link Builder</a>
+        <a href="terms.html" id="nav-terms">Terms & Privacy</a>
+    </nav>    
 </header>
 
     
-    
+
+<body>    
 <div class="persistent-container">
     <main class="content">
         <h1>Terms of Use & Privacy Policy</h1>
@@ -90,6 +90,7 @@
         <p>The website owner reserves the right to modify or discontinue the service at any time without prior notice. Continued use of the website signifies your acceptance of any modifications.</p>
     </main>
 </div>
+
 <script>
     let currentPage = window.location.pathname.split("/").pop();
 
