--- a/terms/index.html
+++ b/terms/index.html
@@ -60,10 +60,10 @@
 </head>
 <header class="header">
     <nav class="nav">
-        <a href="premade.html" id="nav-premade">Premade Links</a>
-        <a href="index.html" id="nav-home">Link Builder</a>
-        <a href="terms.html" id="nav-terms">Terms & Privacy</a>
-    </nav>    
+        <a href="/premade/" id="nav-premade">Premade Links</a>
+        <a href="/" id="nav-home">Link Builder</a>
+        <a href="/terms/" id="nav-terms">Terms & Privacy</a>
+    </nav> 
 </header>
 
     
