--- a/premade.html
+++ b/premade.html
@@ -75,11 +75,10 @@
 </head>
 <header class="header">
     <nav class="nav">
-        <a href="/premade/" id="nav-premade">Premade Links</a>
-        <a href="/" id="nav-home">Link Builder</a>
-        <a href="/terms/" id="nav-terms">Terms & Privacy</a>
-    </nav>
-</header>
+        <a href="premade.html" id="nav-premade">Premade Links</a>
+        <a href="index.html" id="nav-home">Link Builder</a>
+        <a href="terms.html" id="nav-terms">Terms & Privacy</a>
+    </nav>  
 <body>
     <div class="container">
         <h2 id="baseURLLabel">Add Portal URL</h2>
