--- a/premade.html
+++ b/premade.html
@@ -79,6 +79,7 @@
         <a href="index.html" id="nav-home">Link Builder</a>
         <a href="terms.html" id="nav-terms">Terms & Privacy</a>
     </nav>  
+</header>
 <body>
     <div class="container">
         <h2 id="baseURLLabel">Add Portal URL</h2>
