--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link Builder</title>
-    <base href="/Link-Builder/">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
@@ -116,10 +115,10 @@
 </head>
 <header class="header">
     <nav class="nav">
-        <a href="/" id="nav-home">Link Builder</a>
-        <a href="/premade/" id="nav-premade">Premade Links</a>
-        <a href="/terms/" id="nav-terms">Terms & Privacy</a>
-    </nav> 
+        <a href="../" id="nav-home">Link Builder</a>
+        <a href="../premade/" id="nav-premade">Premade Links</a>
+        <a href="../terms/" id="nav-terms">Terms & Privacy</a>
+    </nav>
 </header>
 
 
