--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
 </head>
 <header class="header">
     <nav class="nav">
-        <a href="../" id="nav-home">Link Builder</a>
+        <a href="/" id="nav-home">Link Builder</a>
         <a href="../premade/" id="nav-premade">Premade Links</a>
         <a href="../terms/" id="nav-terms">Terms & Privacy</a>
     </nav>
 </header>
-
+<body>
 
 
     <div class="container-wrapper">
