--- a/terms/index.html
+++ b/terms/index.html
@@ -64,7 +64,7 @@
         <a href="../premade/" id="nav-premade">Premade Links</a>
         <a href="../terms/" id="nav-terms">Terms & Privacy</a>
     </nav>
-
+</header>
     
 
 <body>    
