--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 </head>
 <header class="header">
     <nav class="nav">
-        <a href="/" id="nav-home">Link Builder</a>
-        <a href="../premade/" id="nav-premade">Premade Links</a>
-        <a href="../terms/" id="nav-terms">Terms & Privacy</a>
-    </nav>
+        <a href="/Link-Builder/" id="nav-home">Link Builder</a>
+        <a href="/Link-Builder/premade/" id="nav-premade">Premade Links</a>
+        <a href="/Link-Builder/terms/" id="nav-terms">Terms & Privacy</a>
+    </nav>    
 </header>
 <body>
 
