--- a/premade/index.html
+++ b/premade/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premade Links</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="/Link-Builder/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         body {
@@ -131,7 +131,7 @@
         </div>
     </div>
     
-    <script src="/script.js">
+    <script src="/Link-Builder/script.js">
     </script>
 </body>
 </html>
