--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
 </head>
 <header class="header">
+    <img src="bynder-logo-white.png" alt="Logo" class="logo">
     <nav class="nav">
         <a href="/Link-Builder/" id="nav-home">Link Builder</a>
         <a href="/Link-Builder/premade/" id="nav-premade">Premade Links</a>
