--- a/terms/index.html
+++ b/terms/index.html
@@ -59,7 +59,7 @@
     </script>
 </head>
 <header class="header">
-    <img src="bynder-logo-white.png" alt="Logo" class="logo">
+    <img src="/Link-Builder/bynder-logo-white.png" alt="Logo" class="logo">
     <nav class="nav">
         <a href="/Link-Builder/" id="nav-home">Link Builder</a>
         <a href="/Link-Builder/premade/" id="nav-premade">Premade Links</a>
