--- a/premade/index.html
+++ b/premade/index.html
@@ -131,7 +131,14 @@
             <i class="fas fa-copy" onclick="copyPremadeLink(this)"></i>
         </div>
     </div>
-    
+
+        <h3>✅ Active Assets</h3>
+        <div class="output-container">
+            <p id="outputActiveAssets"></p>
+            <i class="fas fa-copy" onclick="copyPremadeLink(this)"></i>
+        </div>
+
+
     <script src="/Link-Builder/script.js">
     </script>
 </body>
