--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <div class="container active" id="container1">
             <div class="baseURL-container">
                 <h2 id="baseURLLabel">Add Portal URL</h2>
+                <h3>Ensure that the format follows: <u>dam.bynder.com</u></h3>
                 <input type="text" id="baseURL" placeholder="🌐 dam.webshop.com" aria-labelledby="baseURLLabel">
                 <button class="switch-btn">↪</button>
             </div>
@@ -194,6 +195,7 @@
         <div class="container" id="container2">
             <div class="baseURL-container">
                 <h2 id="baseURLLabel">Add Portal URL</h2>
+                <h3>Ensure that the format follows: <u>dam.bynder.com</u></h3>
                 <input type="text" id="baseURL" placeholder="🌐 dam.webshop.com" aria-labelledby="baseURLLabel">
                 <button class="switch-btn">↩</button>
             </div>
