--- a/premade/index.html
+++ b/premade/index.html
@@ -86,6 +86,7 @@
 <body>
     <div class="container">
         <h2 id="baseURLLabel">Add Portal URL</h2>
+        <h3>Ensure that the format follows: <u>dam.bynder.com</u></h3>
         <input type="text" id="baseURL" placeholder="🌐 dam.webshop.com" aria-labelledby="baseURLLabel">
         <h2>Premade Links</h2>        
         
