--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="container active" id="container1">
             <div class="baseURL-container">
                 <h2 id="baseURLLabel">Add Portal URL</h2>
-                <h3>Ensure that the format is: <u>dam.bynder.com</u></h3>
+                <h3>Ensure that the format is: <u>dam.bynder.com</u> — without any extra prefixes or suffixes.</h3>
                 <h4></h4>
                 <input type="text" id="baseURL" placeholder="🌐 dam.webshop.com" aria-labelledby="baseURLLabel">
                 <button class="switch-btn">↪</button>
@@ -196,7 +196,7 @@
         <div class="container" id="container2">
             <div class="baseURL-container">
                 <h2 id="baseURLLabel">Add Portal URL</h2>
-                <h3>Ensure that the format is: <u>dam.bynder.com</u></h3>
+                <h3>Ensure that the format is: <u>dam.bynder.com</u> — without any extra prefixes or suffixes.</h3>
                 <input type="text" id="baseURL" placeholder="🌐 dam.webshop.com" aria-labelledby="baseURLLabel">
                 <button class="switch-btn">↩</button>
             </div>
