--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
             </div>
             
             <h2>Add Keywords</h2>
-            <h3>This creates a search link using specified keywords.
-            </h3>
+            <h3>This creates a search link using specified keywords.</h3>
+            
             <div class="form-group">
                 <input type="text" id="keyword1" placeholder="🔑 Keyword 1">
             </div>
