--- a/terms/index.html
+++ b/terms/index.html
@@ -59,10 +59,10 @@
     </script>
 </head>
 <header class="header">
-    <img src="/Link-Builder/bynder-logo-white.png" alt="Logo" class="logo">
+    <img src="bynder-logo-white.png" alt="Logo" class="logo">
     <nav class="nav">
         <a href="/Link-Builder/" id="nav-home">Link Builder</a>
-        <a href="/Link-Builder/premade/" id="nav-premade">Premade Links</a>
+        <a href="/Link-Builder/premade/" id="nav-premade">Status Links</a>
         <a href="/Link-Builder/terms/" id="nav-terms">Terms & Privacy</a>
     </nav>    
 </header>
