--- a/premade/index.html
+++ b/premade/index.html
@@ -80,7 +80,7 @@
     </script>
 </head>
 <header class="header">
-    <img src="bynder-logo-white.png" alt="Logo" class="logo">
+    <img src="/Link-Builder/bynder-logo-white.png" alt="Logo" class="logo">
     <nav class="nav">
         <a href="/Link-Builder/" id="nav-home">Link Builder</a>
         <a href="/Link-Builder/premade/" id="nav-premade">Status Links</a>
