--- a/premade/index.html
+++ b/premade/index.html
@@ -93,7 +93,8 @@
         <h2 id="baseURLLabel">Add Portal URL</h2>
         <h3>Ensure that the format is: <u>dam.bynder.com</u> — without any extra prefixes or suffixes.</h3>
         <input type="text" id="baseURL" placeholder="🌐 dam.webshop.com" aria-labelledby="baseURLLabel">
-        
+        <h2> &nbsp; </h2>        
+
         <h4>📅 Assets Added Yesterday</h4>
         <div class="output-container">
             <p id="outputAddedYesterday"></p>
