--- a/premade/index.html
+++ b/premade/index.html
@@ -92,6 +92,7 @@
     <div class="container">
         <h2 id="baseURLLabel">Add Portal URL</h2>
         <h3>Ensure that the format is: <u>dam.bynder.com</u> — without any extra prefixes or suffixes.</h3>
+        <h3> &nbsp; </h3>        
         <input type="text" id="baseURL" placeholder="🌐 dam.webshop.com" aria-labelledby="baseURLLabel">
         <h2> &nbsp; </h2>        
 
