--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             <div class="baseURL-container">
                 <h2 id="baseURLLabel">Add Portal URL</h2>
                 <h3>Ensure that the format is: <u>dam.bynder.com</u> — without any extra prefixes or suffixes.</h3>
+                <h3> &nbsp; </h3>    
                 <input type="text" id="baseURL" placeholder="🌐 dam.webshop.com" aria-labelledby="baseURLLabel">
                 <button class="switch-btn">↪</button>
             </div>
@@ -195,6 +196,7 @@
             <div class="baseURL-container">
                 <h2 id="baseURLLabel">Add Portal URL</h2>
                 <h3>Ensure that the format is: <u>dam.bynder.com</u> — without any extra prefixes or suffixes.</h3>
+                <h3> &nbsp; </h3>
                 <input type="text" id="baseURL" placeholder="🌐 dam.webshop.com" aria-labelledby="baseURLLabel">
                 <button class="switch-btn">↩</button>
             </div>
