--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
             gap: 70px;
             padding-top: 15px;
             padding-bottom: 15px;
-        }  
-
+        }
+        label i {
+            margin-right: 5px;
+            color: #ffff;
+            
+        }
         input {
             width: 75%; 
             padding: 8px;
@@ -69,9 +73,9 @@
             word-wrap: break-word;
             text-align: center;
             font-size: 12px;
-            
-        }
 
+
+        }
     </style>
     <script>
         function setFavicon() {
