--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
             <div class="output-container">
                 <p id="output"></p>
-                <i id="copy-icon" class="fas fa-copy" onclick="copyLink()" title="Copy to clipboard" style="cursor: pointer; margin-left: 10px;"></i>
+                <i class="fas fa-copy" title="Copy to clipboard" style="cursor: pointer; margin-left: 10px;"></i>
             </div>
         </div>
 
@@ -218,7 +218,7 @@
 
             <div class="output-container">
                 <p id="output2"></p>
-                <i id="copy-icon-2" class="fas fa-copy" onclick="copyLink2()" title="Copy to clipboard" style="cursor: pointer; margin-left: 10px;"></i>
+                <i class="fas fa-copy" title="Copy to clipboard" style="cursor: pointer; margin-left: 10px;"></i>
             </div>
         </div>
     </div>
