--- a/index.html
+++ b/index.html
@@ -173,8 +173,13 @@
 
 
             <div class="output-container">
-                <p id="output"></p>
-            </div>
+                <div class="link-wrapper">
+                  <p id="output"></p>
+                  <div class="hover-menu" style="display: none;">
+                    Copy Link
+                  </div>
+                </div>
+              </div>
         </div>
 
         <div class="container" id="container2">
@@ -216,8 +221,13 @@
             </div>
 
             <div class="output-container">
-                <p id="output2"></p>
-            </div>
+                <div class="link-wrapper">
+                  <p id="output2"></p>
+                  <div class="hover-menu" style="display: none;">
+                    Copy Link
+                  </div>
+                </div>
+              </div>
         </div>
     </div>
     <script>
