--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
             <div class="output-container">
                 <p id="output"></p>
+                <i class="fas fa-copy" title="Copy to clipboard" style="cursor: pointer; margin-left: 10px;"></i>
             </div>
         </div>
 
@@ -217,6 +218,7 @@
 
             <div class="output-container">
                 <p id="output2"></p>
+                <i class="fas fa-copy" title="Copy to clipboard" style="cursor: pointer; margin-left: 10px;"></i>
             </div>
         </div>
     </div>
