--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
 <header class="header">
     <img src="bynder-logo-white.png" alt="Logo" class="logo">
     <nav class="nav">
-        <a href="/Link-Builder/" id="nav-home">Link Builder</a>
-        <a href="/Link-Builder/terms/" id="nav-terms">Terms & Privacy</a>
-    </nav>    
+        <a href="/index.html" id="nav-home">Link Builder</a>
+        <a href="/terms.html" id="nav-terms">Terms & Privacy</a>
+    </nav>
+
 </header>
 <body>
 
