--- a/terms/index.html
+++ b/terms/index.html
@@ -65,10 +65,11 @@
 </head>
 <header class="header">
     <img src="/Link-Builder/bynder-logo-white.png" alt="Logo" class="logo">
-    <nav class="nav">
-        <a href="/index.html" id="nav-home">Link Builder</a>
-        <a href="/terms/" id="nav-terms">Terms & Privacy</a>
-    </nav>
+<nav class="nav">
+    <a href="/" id="nav-home">Link Builder</a>
+    <a href="/terms/" id="nav-terms">Terms & Privacy</a>
+</nav>
+
   
 </header>
     
