--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 </head>
 <header class="header">
     <img src="bynder-logo-white.png" alt="Logo" class="logo">
-     <nav class="nav">
-        <a href="/index.html" id="nav-home">Link Builder</a>
-        <a href="/terms/" id="nav-terms">Terms & Privacy</a>
-    </nav>
+<nav class="nav">
+    <a href="/" id="nav-home">Link Builder</a>
+    <a href="/terms/" id="nav-terms">Terms & Privacy</a>
+</nav>
 
 
 </header>
