--- a/terms/index.html
+++ b/terms/index.html
@@ -64,7 +64,7 @@
     </script>
 </head>
 <header class="header">
-    <img src="/Link-Builder/bynder-logo-white.png" alt="Logo" class="logo">
+    <img src="/bynder-logo-white.png" alt="Logo" class="logo">
 <nav class="nav">
     <a href="/" id="nav-home">Link Builder</a>
     <a href="/terms/" id="nav-terms">Terms & Privacy</a>
