--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 
 </head>
 <header class="header">
+<a href="https://support.bynder.com" target="_blank" rel="noopener">
     <img src="bynder-logo-white.png" alt="Logo" class="logo">
-<nav class="nav">
+</a><nav class="nav">
     <a href="/" id="nav-home">Link Builder</a>
     <a href="/terms/" id="nav-terms">Terms & Privacy</a>
 </nav>
