--- a/terms/index.html
+++ b/terms/index.html
@@ -64,8 +64,9 @@
     </script>
 </head>
 <header class="header">
-    <img src="/bynder-logo-white.png" alt="Logo" class="logo">
-<nav class="nav">
+    <a href="https://support.bynder.com" target="_blank" rel="noopener">
+    <img src="bynder-logo-white.png" alt="Logo" class="logo">
+    </a><nav class="nav">
     <a href="/" id="nav-home">Link Builder</a>
     <a href="/terms/" id="nav-terms">Terms & Privacy</a>
 </nav>
