--- a/terms/index.html
+++ b/terms/index.html
@@ -64,8 +64,8 @@
     </script>
 </head>
 <header class="header">
-<a href="https://support.bynder.com" target="_blank" rel="noopener" class="logo">
-    <img src="/bynder-logo-white.png" alt="Logo">
+<a href="https://support.bynder.com" target="_blank" rel="noopener">
+    <img src="/bynder-logo-white.png" alt="Logo" class="logo">
 </a>
 <nav class="nav">
     <a href="/" id="nav-home">Link Builder</a>
