--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
         document.addEventListener("DOMContentLoaded", setFavicon);
     </script>
 
-</head>
 <header class="header">
-<a href="https://support.bynder.com" target="_blank" rel="noopener">
-    <img src="bynder-logo-white.png" alt="Logo" class="logo">
-</a><nav class="nav">
+  <a href="https://support.bynder.com" target="_blank" rel="noopener">
+    <img src="/bynder-logo-white.png" alt="Logo" class="logo">
+  </a>
+  <nav class="nav">
     <a href="/" id="nav-home">Link Builder</a>
     <a href="/terms/" id="nav-terms">Terms & Privacy</a>
-</nav>
-
-
+  </nav>
 </header>
+>
+
 <body>
 
 
