--- a/terms/index.html
+++ b/terms/index.html
@@ -64,7 +64,7 @@
     </script>
 </head>
 <header class="header">
-    <img src="/bynder-logo-white.png" alt="Logo" class="logo">
+<img src="bynder-logo-white.png" alt="Logo" class="logo" style="cursor: pointer;" onclick="window.open('https://support.bynder.com', '_blank')">
 <nav class="nav">
     <a href="/" id="nav-home">Link Builder</a>
     <a href="/terms/" id="nav-terms">Terms & Privacy</a>
