--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 </head>
 <header class="header">
-    <img src="bynder-logo-white.png" alt="Logo" class="logo">
+<img src="/bynder-logo-white.png" alt="Logo" class="logo" style="cursor: pointer;" onclick="window.open('https://support.bynder.com', '_blank')">
 <nav class="nav">
     <a href="/" id="nav-home">Link Builder</a>
     <a href="/terms/" id="nav-terms">Terms & Privacy</a>
